# sdk-python

./: .gitignore  .goreleaser.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: goreleaser.yml  release.yml  testing.yml  trivy.yml
examples/: 01_user_login.py  02_client_credentials.py  03_fastapi_server.py  04_async_login.py
src/signet/: __init__.py  exceptions.py
src/signet/authflow/: __init__.py  authcode.py  browser.py  device.py  pkce.py  token_source.py
src/signet/clientcreds/: __init__.py  token_source.py  transport.py
src/signet/credstore/: __init__.py  codecs.py  file_store.py  keyring_store.py  models.py  protocols.py  secure_store.py
src/signet/discovery/: __init__.py  async_client.py  client.py  models.py
src/signet/middleware/: __init__.py  core.py  django.py  fastapi.py  flask.py  models.py
src/signet/oauth/: __init__.py  _parsing.py  async_client.py  client.py  models.py
tests/: conftest.py  test_authflow.py  test_clientcreds.py  test_credstore.py  test_discovery.py  test_middleware.py  test_oauth.py
