[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Signet Contributors"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1", "keyring>=25,<27"]
description = "Python SDK for Signet — OAuth 2.0 authentication and token management"
dynamic = ["version"]
license = "MIT"
name = "go-signet"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "coverage>=7",
  "mypy>=1.10",
  "ruff>=0.5",
]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=2.3"]

[tool.hatch.version]
path = "src/signet/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/signet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "SIM",
  "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["signet"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["keyring", "keyring.errors"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["fastapi", "fastapi.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["flask", "flask.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["django", "django.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
